--- a/app/views/layouts/main.html
+++ b/app/views/layouts/main.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de" >
+<!doctype html>
+<html lang="de">
     <head>
         <title><?php echo $currentPageName; ?> | <?php echo __SITE_TITLE; ?></title>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
+        <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="http://<?php echo __HOST; ?>/css/style.css" />
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
 
